---------------------------------------------------------------------------------------------------
Version: 3.0.13
Date: ?
  Changes:
    - Migrated the internal name of the "railway-mk01" technology to "railway". Resolves https://github.com/pyanodon/pybugreports/issues/453
    - Updated Ukrainian translation.
---------------------------------------------------------------------------------------------------
Version: 3.0.12
Date: 2025-1-20
  Changes:
    - Removed all legacy low-res graphic files from pyanodon.
    - The raw coal big mine now generates 2 coal per mining operation instead of 1.
    - Removed the worldgen silder for vanilla coal. Resolves https://github.com/pyanodon/pybugreports/issues/751
    - Removed hyphens from most item, fluid, entity, and recipe names in order to aid in itemsearch.
---------------------------------------------------------------------------------------------------
Version: 3.0.11
Date: 2024-12-28
  Changes:
    - Fixed a crash when pyAL not installed. Resolves https://github.com/pyanodon/pybugreports/issues/801
---------------------------------------------------------------------------------------------------
Version: 3.0.10
Date: 2024-12-26
  Changes:
    - New icons for glass. Resolves https://github.com/pyanodon/pybugreports/issues/776
    - Added a new chemical science recipe for molten lamp casting.
---------------------------------------------------------------------------------------------------
Version: 3.0.9
Date: 2024-11-29
  Changes:
    - Fixed casting unit loader output always outputting to the left side of the belt.
---------------------------------------------------------------------------------------------------
Version: 3.0.8
Date: 2024-11-29
  Changes:
    - Fixed casting unit loader output not working in north or east facing directions.
---------------------------------------------------------------------------------------------------
Version: 3.0.7
Date: 2024-11-29
  Changes: