@@ -4,6 +4,7 @@ Date: ?
   Changes:
     - Migrated the internal name of the "railway-mk01" technology to "railway". Resolves https://github.com/pyanodon/pybugreports/issues/453
     - Updated Ukrainian translation.
+    - Fixed incorrect shadow for construction robot mk02. Resolves https://github.com/pyanodon/pybugreports/issues/846
 ---------------------------------------------------------------------------------------------------
 Version: 3.0.12
 Date: 2025-1-20
